--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,9 @@
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    %script{src: "https://cdn.tailwindcss.com"}
 
   %body
     = render 'layouts/headers/header'
-    = yield
+    .container.mx-auto
+      = yield
