--- a/app/views/characters/new.html.haml
+++ b/app/views/characters/new.html.haml
@@ -1,3 +1,3 @@
-.container
-  %h1 Créer un nouveau personnage
+.container.mx-auto
+  %h1.text-3xl.font-bold Créer un nouveau personnage
   = render 'form'
