--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -1,30 +1,30 @@
-.container
-  %p#notice= notice
-  .row
-    .col-md-4
-      %h6 Name:
-      %p= @character.name
-  .row
-    .col-md-4
-      %h6 Points de vie:
-      %p= @character.life_points
+.container.mx-auto.mt-8
+  %p#notice.text-center.text-green-500.font-bold= notice
+  .flex.flex-wrap.-mx-4
+    .w-full{class:"md:w-1/3 px-4 mb-4"}
+      %h6.text-lg.font-semibold Name:
+      %p.text-gray-700= @character.name
 
-  .row
-    .col-md-4
-      %h6 Points d'attaque:
-      %p= @character.attack_points
-  -# .row
-  -#   .col-md-4
-  -#     %h6 Points d'expérience:
-  -#     %p= @character.exp
-  .row
-    .col-md-4
-      %h6 Avatar:
+    .w-full{class:".md:w-1/3 px-4 mb-4"}
+      %h6.text-lg.font-semibold Points de vie:
+      %p.text-gray-700= @character.life_points
+
+    .w-full{class:".md:w-1/3 px-4 mb-4"}
+      %h6.text-lg.font-semibold Points d'attaque:
+      %p.text-gray-700= @character.attack_points
+
+    -# Uncomment if you have experience points to display
+    -# .w-full{class:".md:w-1/3 px-4 mb-4"}
+    -#   %h6.text-lg.font-semibold Points d'expérience:
+    -#   %p.text-gray-700= @character.exp
+
+    .w-full{class:".md:w-1/3 px-4 mb-4"}
+      %h6.text-lg.font-semibold Avatar:
       - if @character.avatar.attached?
-        = image_tag @character.avatar, class: 'avatar-image img-thumbnail', width: '80', height: '80'
+        = image_tag @character.avatar, class: 'w-20 h-20 rounded-full object-cover', width: '80', height: '80'
       - else
-        = image_tag 'default_image.png', class: 'avatar-image img-thumbnail', width: '80', height: '80'
-  .row
-    .col-md-6
-      = link_to 'Edit', edit_character_path(@character), class: 'btn btn-primary'
-      = link_to 'Back', characters_path, class: 'btn btn-secondary'
+        = image_tag 'default_image.png', class: 'w-20 h-20 rounded-full object-cover', width: '80', height: '80'
+
+  .flex.justify-start.space-x-4.mt-4
+    = link_to 'Edit', edit_character_path(@character), class: 'inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700'
+    = link_to 'Back', characters_path, class: 'inline-block bg-gray-500 text-white py-2 px-4 rounded hover:bg-gray-700'
