--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -1,33 +1,21 @@
-.container.flex.flex-col
-  .flex.justify-end.mb-4.mt-5
-    = link_to 'Nouveau personnage', new_character_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
-  %h1.text-xl.font-semibold.mb-4 Liste des personnes
-  %table.w-full.text-left.shadow-lg
-    %thead.bg-gray-100
+%div.mt-8.max-w-4xl.mx-auto
+  %h1.text-2xl.font-bold.text-center Characters List
+  = link_to 'Ajouter', new_character_path, class: "mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+
+  %table.mt-4.w-full.text-sm.text-left.text-gray-500
+    %thead.text-xs.text-gray-700.uppercase.bg-gray-50
       %tr
-        %th.px-4.py-2 #
-        %th.px-4.py-2 Nom
-        %th.px-4.py-2 Points de vie
-        %th.px-4.py-2 Points d'attaque
-        %th.px-4.py-2 Points d'expérience
-        %th.px-4.py-2 Avatar
-        %th.px-4.py-2 Actions
+        %th.px-6.py-3 Nom
+        %th.px-6.py-3 Points de vie
+        %th.px-6.py-3 Points d'attaque
+        %th.px-6.py-3 Actions
     %tbody
       - @characters.each do |character|
-        %tr.border-b
-          %th.px-4.py-2.scope= character.id
-          %td.px-4.py-2= character.name
-          %td.px-4.py-2= character.life_points
-          %td.px-4.py-2= character.attack_points
-          %td.px-4.py-2
-            -# Placeholder for character.exp if exists
-          %td.px-4.py-2
-            - if character.avatar.attached?
-              = image_tag character.avatar, class: 'w-8 h-8 rounded-full', width: '32', height: '32'
-            - else
-              = image_tag 'default_image.png', class: 'w-8 h-8 rounded-full', width: '32', height: '32'
-          %td.px-4.py-2.flex.space-x-2
-            = link_to 'Voir', character, class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded text-xs flex items-center justify-center'
-            = link_to 'Modifier', edit_character_path(character), class: 'bg-gray-500 hover:bg-gray-700 text-white font-bold py-1 px-2 rounded text-xs flex items-center justify-center'
-            = form_with(model: character, method: :delete, data: { confirm: 'Are you sure?' }) do |form|
-              = form.submit 'Supprimer', class: 'bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded text-xs flex items-center justify-center'
+        %tr.bg-white.border-b.hover:bg-gray-50
+          %td.px-6.py-4= character.name
+          %td.px-6.py-4= character.life_points
+          %td.px-6.py-4= character.attack_points
+          %td.px-6.py-4.flex.space-x-2
+            = link_to 'Voir', character, class: "text-blue-600 hover:text-blue-900"
+            = link_to 'Modifier', edit_character_path(character), class: "text-blue-600 hover:text-blue-900"
+            = link_to 'Supprimer', character, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-red-600 hover:text-red-900"
