--- a/app/views/characters/new.html.haml
+++ b/app/views/characters/new.html.haml
@@ -1,3 +1,3 @@
-.container.mx-auto
-  %h1.text-3xl.font-bold Créer un nouveau personnage
-  = render 'form'
+%h1.text-3xl.font-bold Créer un nouveau personnage
+= render 'form'
+= link_to 'Retour', characters_path, class: "text-blue-500 hover:text-blue-800"
