--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -2,7 +2,7 @@
   %p#notice.text-center.text-green-500.font-bold= notice
   .flex.flex-wrap.-mx-4
     .w-full{class:"md:w-1/3 px-4 mb-4"}
-      %h6.text-lg.font-semibold Name:
+      %h6.text-lg.font-semibold Nom:
       %p.text-gray-700= @character.name
 
     .w-full{class:".md:w-1/3 px-4 mb-4"}
@@ -26,5 +26,5 @@
         = image_tag 'default_image.png', class: 'w-20 h-20 rounded-full object-cover', width: '80', height: '80'
 
   .flex.justify-start.space-x-4.mt-4
-    = link_to 'Edit', edit_character_path(@character), class: 'inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700'
-    = link_to 'Back', characters_path, class: 'inline-block bg-gray-500 text-white py-2 px-4 rounded hover:bg-gray-700'
+    = link_to 'Modifier', edit_character_path(@character), class: 'inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700'
+    = link_to 'Retour', characters_path, class: 'inline-block bg-gray-500 text-white py-2 px-4 rounded hover:bg-gray-700'
