--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,7 @@
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-    %script{src: "https://cdn.tailwindcss.com"}
-
+    %script{defer: "defer", src: "//unpkg.com/alpinejs"}
   %body
     = render 'layouts/headers/header'
     .container.mx-auto
