--- a/app/views/layouts/headers/_header.html.haml
+++ b/app/views/layouts/headers/_header.html.haml
@@ -28,6 +28,8 @@
             = link_to 'Personnages', characters_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
             = link_to 'Armes', weapons_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
             = link_to 'Boucliers', shields_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+            = link_to 'Combats', battles_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+
   #mobile-menu.sm:hidden
     .space-y-1.px-2.pb-3.pt-2
       / Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white"
@@ -35,3 +37,4 @@
       = link_to 'Personnages', characters_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
       = link_to 'Armes', weapons_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
       = link_to 'Boucliers', shields_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+      = link_to 'Combats', battles_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
