--- a/app/views/characters/_form.html.haml
+++ b/app/views/characters/_form.html.haml
@@ -10,23 +10,23 @@
   .border-b.border-gray-900.border-opacity-10.pb-12
     .mt-10.grid.grid-cols-1.gap-x-6.gap-y-8{class: "sm:grid-cols-6"}
       %div{class: "sm:col-span-4"}
-        = form.label :name, "Username", class: "block text-sm font-medium leading-6 text-gray-900"
+        = form.label :name, "Nom", class: "block text-sm font-medium leading-6 text-gray-900"
         .mt-2
           .flex.rounded-md.shadow-sm.ring-1.ring-inset.ring-gray-300{class: "sm:max-w-md focus:ring-2 focus:ring-indigo-600"}
             %span.flex.select-none.items-center.pl-3.text-gray-500{class: "sm:text-sm"}
-            = form.text_field :name, class: "block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder-gray-400 focus:ring-0 sm:text-sm", placeholder: "janesmith"
+            = form.text_field :name, class: "block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder-gray-400 focus:ring-0 sm:text-sm"
       %div{class: "sm:col-span-4"}
         = form.label :attack_points, "Points d'attaques", class: "block text-sm font-medium leading-6 text-gray-900"
         .mt-2
           .flex.rounded-md.shadow-sm.ring-1.ring-inset.ring-gray-300{class: "sm:max-w-md focus:ring-2 focus:ring-indigo-600"}
             %span.flex.select-none.items-center.pl-3.text-gray-500{class: "sm:text-sm"}
-            = form.number_field :attack_points, class: "block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder-gray-400 focus:ring-0 sm:text-sm", placeholder: "janesmith"
+            = form.number_field :attack_points, class: "block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder-gray-400 focus:ring-0 sm:text-sm"
       %div{class: "sm:col-span-4"}
         = form.label :life_points, "Points de vie", class: "block text-sm font-medium leading-6 text-gray-900"
         .mt-2
           .flex.rounded-md.shadow-sm.ring-1.ring-inset.ring-gray-300{class: "sm:max-w-md focus:ring-2 focus:ring-indigo-600"}
             %span.flex.select-none.items-center.pl-3.text-gray-500{class: "sm:text-sm"}
-            = form.number_field :life_points, class: "block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder-gray-400 focus:ring-0 sm:text-sm", placeholder: "janesmith"
+            = form.number_field :life_points, class: "block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder-gray-400 focus:ring-0 sm:text-sm"
 
       .col-span-full
         = form.label :avatar, "Photo", class: "block text-sm font-medium leading-6 text-gray-900"
