--- a/app/views/shields/index.html.haml
+++ b/app/views/shields/index.html.haml
@@ -17,3 +17,5 @@
             = link_to 'Voir', shield, class: "text-blue-600 hover:text-blue-900 mr-2"
             = link_to 'Modifier', edit_shield_path(shield), class: "text-blue-600 hover:text-blue-900 mr-2"
             = link_to 'Supprimer', shield, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-red-600 hover:text-red-900"
+%div.flex.justify-center.mt-4
+  = tailwind_paginate @battles
