--- a/app/views/battles/show.html.haml
+++ b/app/views/battles/show.html.haml
@@ -3,6 +3,12 @@
 
   .bg-green-100.border.border-green-400.text-green-700.px-4.py-3.rounded.relative.mb-6
     %span.font-bold Gagnant:
+    .w-full{class:".md:w-1/4"}
+      - if @battle.winner.avatar.attached?
+        = image_tag @battle.winner.avatar, class: 'w-20 h-15 rounded-full object-cover', width: '80', height: '80'
+      - else
+        = image_tag 'default_image.png', class: 'w-20 h-20 rounded-full object-cover', width: '80', height: '80'
+
     = @battle.winner.name
 
   %h2.text-2xl.font-semibold.mb-4 Actions
