add some background

--- a/app/views/battles/new.html.haml
+++ b/app/views/battles/new.html.haml
@@ -1,4 +1,4 @@
-.container.mx-auto.mt-10
+.container.mx-auto.mt-10.battles-new-background
   %h1.text-3xl.font-bold.text-center.mb-10 Arène
   %p.text-xl.text-center.mb-4 Bienvenue dans l'Arène des Champions, où les braves s'affrontent pour la gloire et l'honneur.
   %p.text-lg.text-center.mb-8 Préparez-vous à choisir vos combattants et à les mener à la victoire dans des duels épiques qui resteront gravés dans l'histoire.
