--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -6,4 +6,11 @@
 
 .card {
   @apply bg-white rounded-lg shadow-2xl overflow-hidden p-4 text-center justify-center items-center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.battles-new-background {
+  background-image: url('coliseum_el_jem.jpg');
+  background-size: cover; /* Pour couvrir tout l'espace disponible */
+  height: 100vh; /* Exemple de hauteur, ajustez selon vos besoins */
 }
