--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -6,6 +6,9 @@
 
 .card {
   @apply bg-white rounded-lg shadow-2xl overflow-hidden p-4 text-center justify-center items-center;
+}
+
+.transparent-bg{
   background-color: rgba(255, 255, 255, 0.5);
 }
 
